docs/paper-trades/v5/2026-05-15_report.md
# v5 Paper Trading Report -- 2026-05-15

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | BEAR |
| **Net P&L** | **Rs -391 (-0.04%)** |
| Trades | 47 (L:16 S:31) |
| Win Rate | 51% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | HINDZINC | 643.20 | 637.15 | Rs +139 | STOPLOSS |
| 2 | SHORT | INTRADAY | IDFCFIRSTB | 66.89 | 67.23 | Rs -45 | STOPLOSS |
| 3 | SHORT | INTRADAY | BSE | 3996.00 | 4020.90 | Rs -100 | STOPLOSS |
| 4 | SHORT | INTRADAY | M&M | 3132.10 | 3151.80 | Rs -79 | STOPLOSS |
| 5 | SHORT | INTRADAY | TRENT | 4040.00 | 4063.90 | Rs -48 | STOPLOSS |
| 6 | SHORT | INTRADAY | HINDALCO | 1073.30 | 1081.30 | Rs -96 | STOPLOSS |
| 7 | SHORT | INTRADAY | BHEL | 401.70 | 403.95 | Rs -56 | STOPLOSS |
| 8 | SHORT | INTRADAY | IDFCFIRSTB | 67.33 | 68.12 | Rs -141 | STOPLOSS |
| 9 | SHORT | INTRADAY | AUBANK | 986.10 | 993.00 | Rs -62 | STOPLOSS |
| 10 | SHORT | INTRADAY | HINDZINC | 636.55 | 641.00 | Rs -71 | STOPLOSS |
| 11 | SHORT | INTRADAY | MUTHOOTFIN | 3303.10 | 3328.80 | Rs -77 | STOPLOSS |
| 12 | SHORT | INTRADAY | RELIANCE | 1339.80 | 1336.20 | Rs +47 | FLAT_FORCE_EXIT |
| 13 | SHORT | INTRADAY | HAL | 4436.70 | 4425.00 | Rs +35 | FLAT_FORCE_EXIT |
| 14 | SHORT | INTRADAY | NATIONALUM | 404.20 | 404.25 | Rs -2 | FLAT_FORCE_EXIT |
| 15 | SHORT | INTRADAY | HINDPETRO | 364.85 | 367.00 | Rs -67 | STOPLOSS |
| 16 | SHORT | INTRADAY | IOC | 137.78 | 135.00 | Rs +436 | TARGET |
| 17 | SHORT | INTRADAY | MUTHOOTFIN | 3304.00 | 3324.00 | Rs -20 | STOPLOSS |
| 18 | SHORT | INTRADAY | BPCL | 287.45 | 284.20 | Rs +228 | TIME_EXIT |
| 19 | SHORT | INTRADAY | DIVISLAB | 6848.50 | 6764.50 | Rs +84 | TIME_EXIT |
| 20 | SHORT | INTRADAY | MPHASIS | 2092.20 | 2085.70 | Rs +13 | TIME_EXIT |
| 21 | SHORT | INTRADAY | PNB | 102.97 | 102.00 | Rs +42 | TIME_EXIT |
| 22 | SHORT | INTRADAY | RELIANCE | 1333.80 | 1337.30 | Rs -10 | TIME_EXIT |
| 23 | SHORT | INTRADAY | SAIL | 194.87 | 192.79 | Rs +46 | TIME_EXIT |
| 24 | SHORT | INTRADAY | TATASTEEL | 217.42 | 216.78 | Rs +12 | TIME_EXIT |
| 25 | SHORT | INTRADAY | UNIONBANK | 162.26 | 161.95 | Rs +8 | TIME_EXIT |
| 26 | SHORT | INTRADAY | COCHINSHIP | 1595.30 | 1593.00 | Rs +5 | TIME_EXIT |
| 27 | SHORT | INTRADAY | NESTLEIND | 1439.50 | 1432.10 | Rs +15 | TIME_EXIT |
| 28 | SHORT | INTRADAY | BANKBARODA | 263.00 | 261.80 | Rs +18 | TIME_EXIT |
| 29 | SHORT | INTRADAY | INDUSINDBK | 888.00 | 887.70 | Rs +1 | TIME_EXIT |
| 30 | SHORT | INTRADAY | IOC | 134.81 | 134.76 | Rs +2 | TIME_EXIT |
| 31 | SHORT | INTRADAY | VOLTAS | 1235.00 | 1228.20 | Rs +20 | TIME_EXIT |
| 32 | LONG | SWING | HINDALCO | 1094.30 | 1078.90 | Rs -246 | STOPLOSS |
| 33 | LONG | SWING | ADANIENT | 2680.80 | 2693.60 | Rs +13 | STOPLOSS |
| 34 | LONG | SWING | VEDL | 339.50 | 328.15 | Rs -136 | STOPLOSS |
| 35 | LONG | SWING | ADANIGREEN | 1414.90 | 1394.80 | Rs -221 | STOPLOSS |
| 36 | LONG | SWING | BHEL | 413.15 | 407.45 | Rs -200 | STOPLOSS |
| 37 | LONG | SWING | MCX | 3341.80 | 3375.00 | Rs +33 | STOPLOSS |
| 38 | LONG | SWING | MANKIND | 2492.80 | 2518.20 | Rs +127 | STOPLOSS |
| 39 | LONG | SWING | UNITDSPR | 1328.90 | 1326.00 | Rs -35 | SIGNAL_FLIP |
| 40 | LONG | SWING | SUNPHARMA | 1876.50 | 1885.40 | Rs +62 | SIGNAL_FLIP |
| 41 | LONG | SWING | BHARTIARTL | 1881.90 | 1910.70 | Rs +58 | STOPLOSS |
| 42 | LONG | SWING | VMM | 120.43 | 120.31 | Rs -14 | SIGNAL_FLIP |
| 43 | LONG | SWING | CIPLA | 1435.30 | 1435.40 | Rs +0 | FLAT_FORCE_EXIT |
| 44 | LONG | SWING | BIOCON | 431.15 | 430.50 | Rs -21 | FLAT_FORCE_EXIT |
| 45 | LONG | SWING | KOTAKBANK | 389.75 | 390.85 | Rs +48 | FLAT_FORCE_EXIT |
| 46 | LONG | SWING | ABCAPITAL | 360.35 | 357.55 | Rs -118 | SIGNAL_FLIP |
| 47 | LONG | SWING | TIINDIA | 2867.50 | 2848.90 | Rs -19 | SIGNAL_FLIP |