docs/paper-trades/v6/2026-05-15_report.md
# v5 Paper Trading Report -- 2026-05-15

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | BEAR |
| **Net P&L** | **Rs 306 (+0.03%)** |
| Trades | 44 (L:13 S:31) |
| Win Rate | 57% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | HINDZINC | 643.20 | 633.20 | Rs +220 | TARGET |
| 2 | SHORT | INTRADAY | IDFCFIRSTB | 66.89 | 68.24 | Rs -178 | STOPLOSS |
| 3 | SHORT | INTRADAY | DLF | 570.85 | 572.10 | Rs -48 | FLAT_FORCE_EXIT |
| 4 | SHORT | INTRADAY | RELIANCE | 1339.80 | 1336.20 | Rs +43 | FLAT_FORCE_EXIT |
| 5 | SHORT | INTRADAY | HAL | 4436.70 | 4425.00 | Rs +35 | FLAT_FORCE_EXIT |
| 6 | SHORT | INTRADAY | M&M | 3132.10 | 3136.20 | Rs -16 | FLAT_FORCE_EXIT |
| 7 | SHORT | INTRADAY | NATIONALUM | 404.15 | 404.25 | Rs -3 | FLAT_FORCE_EXIT |
| 8 | SHORT | INTRADAY | BHEL | 401.70 | 402.90 | Rs -30 | FLAT_FORCE_EXIT |
| 9 | SHORT | INTRADAY | HINDZINC | 641.60 | 640.60 | Rs +12 | FLAT_FORCE_EXIT |
| 10 | SHORT | INTRADAY | HINDALCO | 1073.70 | 1074.90 | Rs -14 | FLAT_FORCE_EXIT |
| 11 | SHORT | INTRADAY | IOC | 137.78 | 135.54 | Rs +327 | TARGET |
| 12 | SHORT | INTRADAY | DIVISLAB | 6848.50 | 6743.50 | Rs +105 | TARGET |
| 13 | SHORT | INTRADAY | BPCL | 287.40 | 284.20 | Rs +208 | TIME_EXIT |
| 14 | SHORT | INTRADAY | BSE | 3996.00 | 4002.00 | Rs -18 | TIME_EXIT |
| 15 | SHORT | INTRADAY | HINDPETRO | 364.85 | 367.05 | Rs -68 | TIME_EXIT |
| 16 | SHORT | INTRADAY | TRENT | 4040.00 | 4091.90 | Rs -104 | TIME_EXIT |
| 17 | SHORT | INTRADAY | AUBANK | 986.10 | 990.00 | Rs -35 | TIME_EXIT |
| 18 | SHORT | INTRADAY | MUTHOOTFIN | 3303.10 | 3311.20 | Rs -16 | TIME_EXIT |
| 19 | SHORT | INTRADAY | MPHASIS | 2092.20 | 2085.70 | Rs +46 | TIME_EXIT |
| 20 | SHORT | INTRADAY | HINDZINC | 640.45 | 639.50 | Rs +20 | TIME_EXIT |
| 21 | SHORT | INTRADAY | PNB | 102.97 | 102.00 | Rs +122 | TIME_EXIT |
| 22 | SHORT | INTRADAY | RELIANCE | 1333.80 | 1337.30 | Rs -32 | TIME_EXIT |
| 23 | SHORT | INTRADAY | SAIL | 194.87 | 192.79 | Rs +119 | TIME_EXIT |
| 24 | SHORT | INTRADAY | ALKEM | 5487.50 | 5487.50 | Rs +0 | TIME_EXIT |
| 25 | SHORT | INTRADAY | TATASTEEL | 217.42 | 216.78 | Rs +29 | TIME_EXIT |
| 26 | SHORT | INTRADAY | NESTLEIND | 1439.50 | 1432.10 | Rs +52 | TIME_EXIT |
| 27 | SHORT | INTRADAY | COCHINSHIP | 1595.30 | 1593.00 | Rs +14 | TIME_EXIT |
| 28 | SHORT | INTRADAY | UNIONBANK | 162.21 | 161.95 | Rs +15 | TIME_EXIT |
| 29 | SHORT | INTRADAY | HINDZINC | 640.10 | 639.50 | Rs +8 | TIME_EXIT |
| 30 | SHORT | INTRADAY | BANKBARODA | 263.00 | 261.80 | Rs +36 | TIME_EXIT |
| 31 | SHORT | INTRADAY | INDUSINDBK | 888.00 | 887.55 | Rs +4 | TIME_EXIT |
| 32 | LONG | SWING | HINDALCO | 1094.00 | 1079.00 | Rs -210 | STOPLOSS |
| 33 | LONG | SWING | ADANIGREEN | 1414.90 | 1394.80 | Rs -221 | STOPLOSS |
| 34 | LONG | SWING | BHEL | 413.15 | 407.45 | Rs -200 | STOPLOSS |
| 35 | LONG | SWING | ADANIPOWER | 224.49 | 216.92 | Rs -401 | STOPLOSS |
| 36 | LONG | SWING | BLUESTARCO | 1667.20 | 1669.70 | Rs +18 | SIGNAL_FLIP |
| 37 | LONG | SWING | HEROMOTOCO | 5077.00 | 5098.00 | Rs +42 | SIGNAL_FLIP |
| 38 | LONG | SWING | ADANIENT | 2712.90 | 2763.20 | Rs +302 | STOPLOSS |
| 39 | LONG | SWING | BIOCON | 428.70 | 428.05 | Rs -18 | STOPLOSS |
| 40 | LONG | SWING | ADANIPORTS | 1773.40 | 1800.00 | Rs +186 | STOPLOSS |
| 41 | LONG | SWING | TATACOMM | 1706.10 | 1688.40 | Rs -106 | STOPLOSS |
| 42 | LONG | SWING | SUNPHARMA | 1876.50 | 1877.90 | Rs +8 | FLAT_FORCE_EXIT |
| 43 | LONG | SWING | VMM | 120.43 | 120.59 | Rs +15 | FLAT_FORCE_EXIT |
| 44 | LONG | SWING | KOTAKBANK | 389.75 | 390.85 | Rs +40 | FLAT_FORCE_EXIT |